--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ target
 .vertx
 *.iml
 .DS_Store
+
+node_modules
+coverage
+build
+webroot
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
