--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
               </transformers>
               <artifactSet>
               </artifactSet>
-              <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
+              <outputFile>${project.build.directory}/${project.artifactId}-fat.jar
               </outputFile>
             </configuration>
           </execution>
