--- a/src/main/resources/currencyfair/package.json
+++ b/src/main/resources/currencyfair/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "vertx3-eventbus-client": "^3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
