--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <junit-platform-launcher.version>1.2.0</junit-platform-launcher.version>
 
     <main.verticle>com.currencyfair.exercise.MainVerticle</main.verticle>
+    <guava.version>26.0-jre</guava.version>
   </properties>
 
   <dependencyManagement>
@@ -56,6 +57,11 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-tcp-eventbus-bridge</artifactId>
       <version>${vertx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
