--- a/src/main/resources/currencyfair/package.json
+++ b/src/main/resources/currencyfair/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-local": "REACT_APP_BACKEND=http://localhost:8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
